:sparkles: Implement category and unit services in product-form :wrench: Consume services in form

--- a/src/app/components/product-dialog/product-dialog.component.html
+++ b/src/app/components/product-dialog/product-dialog.component.html
@@ -8,4 +8,6 @@
     <mat-icon>close</mat-icon>
   </button>
 </mat-dialog-actions>
-<mat-dialog-content><app-product-form></app-product-form> </mat-dialog-content>
+<mat-dialog-content>
+  <app-product-form></app-product-form>
+</mat-dialog-content>
