--- a/src/app/components/product-form/product-form.component.html
+++ b/src/app/components/product-form/product-form.component.html
@@ -1,4 +1,4 @@
-<form>
+<form (ngSubmit)="onSubmit()">
   <table class="w-full" cellspacing="0">
     <tr>
       <td>
@@ -18,8 +18,8 @@
           <mat-label>Category</mat-label>
           <mat-select [(ngModel)]="product.category" name="category" required>
             @for (category of categories; track category) {
-            <mat-option [value]="category.value">{{
-              category.viewValue
+            <mat-option [value]="category.category_id">{{
+              category.category_name
             }}</mat-option>
             }
           </mat-select>
@@ -66,18 +66,6 @@
   </mat-form-field>
 
   <div class="flex justify-end my-2">
-    <button
-      mat-raised-button
-      color="primary"
-      [disabled]="
-        !product.name ||
-        !product.category ||
-        !product.sellingPrice ||
-        !product.unit
-      "
-      (click)="onSubmit()"
-    >
-      Save
-    </button>
+    <button type="submit" mat-raised-button color="primary">Save</button>
   </div>
 </form>
