--- a/src/app/components/product-table/product-table.component.html
+++ b/src/app/components/product-table/product-table.component.html
@@ -1,7 +1,15 @@
 <table mat-table [dataSource]="dataSource" class="my-4">
   <!-- Name Column -->
+  <ng-container matColumnDef="created_at">
+    <th mat-header-cell *matHeaderCellDef>Created at</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.created_at | date : "medium" }}
+    </td>
+  </ng-container>
+
+  <!-- Name Column -->
   <ng-container matColumnDef="product_name">
-    <th mat-header-cell *matHeaderCellDef>Name.</th>
+    <th mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let element">{{ element.product_name }}</td>
   </ng-container>
 
