--- a/src/app/components/product-table/product-table.component.html
+++ b/src/app/components/product-table/product-table.component.html
@@ -42,7 +42,11 @@
   <!-- description Column -->
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Action</th>
-    <td mat-cell *matCellDef="let element"><h1>Action</h1></td>
+    <td mat-cell *matCellDef="let element">
+      <app-add-to-cart
+        [item]="{ id: element.product_id, quantity: 0 }"
+      ></app-add-to-cart>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
