:sparkles: render sales data in sales page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,6 @@
 <mat-toolbar color="primary">
-  <a routerLink="/" class="mx-2"> Fedpos App </a>
-
+  <a routerLink="/" class="mx-2"> Febpos App </a>
   <span class="example-spacer"></span>
-
+  <a routerLink="/" class="mx-2">Products</a>
   <a routerLink="/sales" class="mx-2">Sales</a>
 </mat-toolbar>
