--- a/src/app/components/product-table/product-table.component.html
+++ b/src/app/components/product-table/product-table.component.html
@@ -1,54 +1,56 @@
-<table mat-table [dataSource]="dataSource" class="my-4">
-  <!-- Name Column -->
-  <ng-container matColumnDef="created_at">
-    <th mat-header-cell *matHeaderCellDef>Created at</th>
-    <td mat-cell *matCellDef="let element">
-      {{ element.created_at | date : "medium" }}
-    </td>
-  </ng-container>
+<div class="overflow-x-scroll">
+  <table mat-table [dataSource]="dataSource" class="my-4">
+    <!-- Name Column -->
+    <ng-container matColumnDef="created_at">
+      <th mat-header-cell *matHeaderCellDef>Created at</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.created_at | date : "medium" }}
+      </td>
+    </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="product_name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.product_name }}</td>
-  </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="product_name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.product_name }}</td>
+    </ng-container>
 
-  <!-- Category Column -->
-  <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef>Category</th>
-    <td mat-cell *matCellDef="let element">
-      {{ element.category.category_name }}
-    </td>
-  </ng-container>
+    <!-- Category Column -->
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef>Category</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.category.category_name }}
+      </td>
+    </ng-container>
 
-  <!-- Category Column -->
-  <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef>Selling Price</th>
-    <td mat-cell *matCellDef="let element">{{ element.price }}</td>
-  </ng-container>
+    <!-- Category Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef>Selling Price</th>
+      <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+    </ng-container>
 
-  <!-- unit Column -->
-  <ng-container matColumnDef="unit">
-    <th mat-header-cell *matHeaderCellDef>Unit</th>
-    <td mat-cell *matCellDef="let element">{{ element.unit }}</td>
-  </ng-container>
+    <!-- unit Column -->
+    <ng-container matColumnDef="unit">
+      <th mat-header-cell *matHeaderCellDef>Unit</th>
+      <td mat-cell *matCellDef="let element">{{ element.unit }}</td>
+    </ng-container>
 
-  <!-- description Column -->
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef>Description</th>
-    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-  </ng-container>
+    <!-- description Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Description</th>
+      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+    </ng-container>
 
-  <!-- description Column -->
-  <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef>Action</th>
-    <td mat-cell *matCellDef="let element">
-      <app-add-to-cart
-        [item]="{ id: element.product_id, quantity: 0 }"
-      ></app-add-to-cart>
-    </td>
-  </ng-container>
+    <!-- description Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let element">
+        <app-add-to-cart
+          [item]="{ id: element.product_id, quantity: 0 }"
+        ></app-add-to-cart>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
