--- a/src/app/components/sale-table/sale-table.component.html
+++ b/src/app/components/sale-table/sale-table.component.html
@@ -1,1 +1,75 @@
-<p>sale-table works!</p>
+<div class="py-4">
+  @for(item of dataSource; track item.sale_id) {
+  <mat-card class="m-3">
+    <mat-card-header class="flex items-center justify-between p-6">
+      <mat-card-title class="text-lg font-semibold py-2"
+        >Sale ID: 40</mat-card-title
+      >
+      <mat-card-subtitle class="text-gray-500 py-2">
+        Date: {{ item.sale_date | date : "long" }}
+      </mat-card-subtitle>
+      <mat-card-subtitle class="text-gray-500 py-2">
+        <div class="flex">VAT: @if(item.vat) { Yes } @else { No }</div>
+      </mat-card-subtitle>
+      <mat-card-subtitle class="text-gray-500 py-2">
+        Discount: {{ item.discount }}
+      </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content class="p-6 mt-4">
+      <h3 class="text-lg font-semibold mt-4 mb-2">Sale Items:</h3>
+      <table class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-50">
+          <tr>
+            <th
+              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+            >
+              Product Name
+            </th>
+            <th
+              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+            >
+              Quantity
+            </th>
+            <th
+              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+            >
+              Price
+            </th>
+          </tr>
+        </thead>
+        <tbody class="bg-white divide-y divide-gray-200">
+          @for(sale_item of item.sale_items; track sale_item.sale_item_id) {
+          <tr>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+              {{ sale_item.product.product_name }}
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+              {{ sale_item.quantity }} {{ sale_item.product.unit }}
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+              {{ sale_item.product.price }}
+            </td>
+          </tr>
+          }
+        </tbody>
+      </table>
+      <div class="py-4">
+        <mat-card-subtitle class="text-gray-500 py-2">
+          Sub total(KSH): {{ item.sub_total }}
+        </mat-card-subtitle>
+        <mat-card-subtitle class="text-gray-500 py-2">
+          Vat Amount(KSH): {{ item.vat_amount }}
+        </mat-card-subtitle>
+        <mat-card-subtitle class="text-gray-500 py-2">
+          Total After Discount(KSH): {{ item.total_after_discount }}
+        </mat-card-subtitle>
+        <mat-card-subtitle class="text-gray-500 py-2">
+          Total(KSH): {{ item.total }}
+        </mat-card-subtitle>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  } @empty {
+  <h1>There are no sale available.</h1>
+  }
+</div>
