Hot fix: fix cart service not adding items to cart

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
-<app-product-dialog></app-product-dialog>
+<div class="flex justify-end">
+  <app-product-dialog class="mr-2"></app-product-dialog>
+  <app-sale-dialog></app-sale-dialog>
+</div>
 
 <app-product-table></app-product-table>
