--- a/src/app/components/product-form/product-form.component.html
+++ b/src/app/components/product-form/product-form.component.html
@@ -1,4 +1,7 @@
 <form (ngSubmit)="onSubmit()">
+  <h3 class="text-base font-semibold leading-7 text-gray-900">
+    Product Information
+  </h3>
   <table class="w-full" cellspacing="0">
     <tr>
       <td>
