--- a/src/app/components/product-table/product-table.component.html
+++ b/src/app/components/product-table/product-table.component.html
@@ -45,7 +45,7 @@
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let element">
         <app-add-to-cart
-          [item]="{ id: element.product_id, quantity: 0 }"
+          [item]="{ product_id: element.product_id, quantity: 0 }"
         ></app-add-to-cart>
       </td>
     </ng-container>
